2008-03-06  Alan D. Salewski  <ASalewski@signatureinfo.com>

	* configure.ac (AC_CONFIG_FILES): Added to list:
	  src/main/resources/htdocs/img/Makefile
	* src/main/resources/htdocs/error.rock (bedbug.jpg): prefix
	  '/Bedrock/' to img ref path
	* src/main/resources/htdocs/Makefile.am (SUBDIRS): Added 'img' to list
	* src/main/resources/htdocs/img/Makefile.am: new file
	* src/main/resources/htdocs/img/bedbug.jpg: new file (from bedrock 1.6.4 tarball)
	* src/main/resources/htdocs/img/bedrock.jpg: new file (from bedrock 1.6.4 tarball)
	* src/main/resources/htdocs/img/br_lcap.gif: new file (from bedrock 1.6.4 tarball)
	* src/main/resources/htdocs/img/br_rcap.gif: new file (from bedrock 1.6.4 tarball)
	* src/main/resources/htdocs/img/one.gif: new file (from bedrock 1.6.4 tarball)

2008-03-05  Alan D. Salewski  <ASalewski@signatureinfo.com>

	* src/main/perl/bin/bedrock-create-site.in: Doc fix
	(maybe_create_apache_site_config_file_or_die): Commented out
	  Apache site config 'ErrorDocument' directive that specified a
	  Bedrock-specific HTTP 401 document

2008-03-04  Alan D. Salewski  <ASalewski@signatureinfo.com>

	* src/main/perl/bin/bedrock-create-site.in
	(Hash::Util::lock_hash): Change for compatibility with Perl
	  pre-5.8.x; use of Hash::Util module is now optional, and
	  dependent on whether or not the module is installed.
	* README: updated docs to reflect the fact that Perl 5.8.x is no
	  longer required

	* src/main/perl/bin/bedrock-create-site.in
	(maybe_copy_dist_error_dot_rock_or_die): Copy 'error.rock', not
	  'index.rock', from the Bedrock distribution

	* examples/cli/bedrock-create-site-example.com: new file

	* configure.ac: 
	(ads_PERL_MODULE): new check for Carp
	(ads_PERL_MODULE): new check for Cwd
	(ads_PERL_MODULE): new check for Fcntl
	(ads_PERL_MODULE): new check for File::Basename
	(ads_PERL_MODULE): new check for File::Copy
	(ads_PERL_MODULE): new check for File::Path
	(ads_PERL_MODULE): new check for File::Spec::Functions