@@ -665,8 +665,6 @@ sub __create_admin_index_dot_rock_or_die {
         exit 1;
     }
 
-    # Note that the Bedrock/img/ path below is aliased in the Apache config
-    # file snippet that we create
     my $now = localtime;  # e.g., "Thu Oct 13 04:54:34 2007"
     print INDEX_DOT_ROCK <<'EOF';
 <html>
@@ -1350,9 +1348,9 @@ sub maybe_copy_dist_bedrock_dot_cgi_or_die {
 #     $DO_OVERWRITE_APACHE_SITE_CONF
 #     $DO_OVERWRITE_APACHE_AUTH_DB_INCLUDE
 #
-# This function takes an alarming number of "named" parameters (only 5 of
-# which are required). Most of them are simply used as values for various
-# Apache authentication directives in the generated config file(s).
+# This function takes an alarming number of "named" parameters (6 of which
+# are required). Most of them are simply used as values for various Apache
+# authentication directives in the generated config file(s).
 #
 # @param APACHE_SITE_CONF_PATH - (required) Path where we should write a
 #                                virtual host config file snippet for the
@@ -1414,6 +1412,10 @@ sub maybe_copy_dist_bedrock_dot_cgi_or_die {
 #                      authentication credentials. If not provided, defaults
 #                      to 'Please Enter Your Site Credentials'.
 #
+# @param BEDROCK_HTDOCS_DIR - (required) Path to the installed Bedrock
+#                             'htdocs' directory. Used to alias /Bedrock/img
+#                             directory in generated Apache config file.
+#
 # @return Does not return a meaningful value. Exits with an error status on
 #         error.
 #
@@ -1435,6 +1437,8 @@ sub maybe_create_apache_site_config_file_or_die {
 
                   AUTH_PROMPT         => 'Please Enter Your Site Credentials',
 
+                  BEDROCK_HTDOCS_DIR  => undef,
+
                   # Passed "named" arguments override above defaults
                   @_);
 
@@ -1453,6 +1457,9 @@ sub maybe_create_apache_site_config_file_or_die {
     confess( __func, q{(): required 'AUTH_PASSWORD' param not provided} )
         unless (exists $args{AUTH_PASSWORD}
                 && defined $args{AUTH_PASSWORD});
+    confess( __func, q{(): required 'BEDROCK_HTDOCS_DIR' param not provided} )
+        unless (exists $args{BEDROCK_HTDOCS_DIR}
+                && defined $args{BEDROCK_HTDOCS_DIR});
 
     # Make sure caller hasn't set to undef any of our optional opts. We're
     # depending on these having values (except for
@@ -1568,10 +1575,10 @@ DocumentRoot ${site_dir}/htdocs
 </Directory>
 
 Alias /img_shared  ${site_dir}/htdocs/img
-Alias /Bedrock/img ${site_dir}/htdocs/img
+Alias /Bedrock/img $args{BEDROCK_HTDOCS_DIR}/img
 
 <Directory ${site_dir}/htdocs/img>
-   Options All 
+   Options All
    AllowOverride All
    Order allow,deny
    Allow from all
@@ -2060,7 +2067,9 @@ maybe_create_apache_site_config_file_or_die(
     AUTH_USERNAME_FIELD => $AUTH_USERNAME_FIELD,
     AUTH_PASSWORD_FIELD => $AUTH_PASSWORD_FIELD,
 
-    AUTH_PROMPT   => $AUTH_PROMPT );
+    AUTH_PROMPT   => $AUTH_PROMPT,
+
+    BEDROCK_HTDOCS_DIR => $BEDROCK_DIST_HTDOCS_DIR );
 
 maybe_create_apache_mod_perl_startup_dot_pl_file_or_die( 
     APACHE_MOD_PERL_STARTUP_CONF_PATH => $APACHE_MOD_PERL_STARTUP_CONF_FNAME,
