@@ -1,5 +1,9 @@
 2008-03-06  Alan D. Salewski  <ASalewski@signatureinfo.com>
 
+	* src/main/perl/bin/bedrock-create-site.in (maybe_create_apache_site_config_file_or_die):
+	  Alias /Bedrock/img to the installed bedrock ${htdocsdir}/img
+	  directory instead to the ${site_dir}/htdocs/img directory
+
 	* configure.ac (AC_CONFIG_FILES): Added to list:
 	  src/main/resources/htdocs/img/Makefile
 	* src/main/resources/htdocs/error.rock (bedbug.jpg): prefix
